// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`About should render correctly 1`] = `
[
  <h1>
    Hello, from About page
  </h1>,
]
`;

exports[`Contact should render correctly 1`] = `
[
  <h1>
    Hello, from Contact page
  </h1>,
]
`;
